--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,8 @@
                             <li class="nav-item"><a class="nav-link" href="/rps">Rock Paper Scissor</a></li>
                             <li class="nav-item"><a class="nav-link" href="/hl">Higher Lower</a></li>
                             <li class="nav-item"><a class="nav-link" href="/hangman">Hangman</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/gsq">Google Search Query</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/statistics">Statistics</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/highscore">Highscore</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/profile"> profile</a></li>
