--- a/templates/rps.html
+++ b/templates/rps.html
@@ -6,6 +6,7 @@
 
 {% block main %}
 
+<p>You know the game, rock, paper or scissors!</p>
 
 <form method="post" style="text-align: center;">
     <button class="btn btn-primary" type="submit" name="choice" value="rock">Rock</button>
